# mw-omega-orchestrator

./: CONTRIBUTING.md  README.md  SETUP.md  mw_orchestrator.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: mw-omega-orchestrator.yml  pages.yml  test.yml
assets/: demo-output.txt  verification-proof.md
data/: README.md  kdp_royalties.csv  revenue_summary.json
demo/: README.md  run_demo.py
docs/: index.html
mw-omega-orchestrator/: SETUP.md
mw-omega-orchestrator/.github/workflows/: mw-omega-orchestrator.yml
mw-omega-orchestrator/reports/: .gitkeep
reports/: mw-omega_weekly_2026-02-13_0409.md  mw-omega_weekly_2026-02-16_1602.md
scripts/: notion_sync.py  parse_revenue.py  update_dashboard.py
tests/: test_decision_compressor.py  test_dependency_graph.py  test_monte_carlo.py
